@@ -3,7 +3,10 @@ package com.example.timestampconverter;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.wm.ToolWindow;
 import com.intellij.openapi.wm.ToolWindowFactory;
-import com.intellij.ui.components.*;
+import com.intellij.ui.components.JBLabel;
+import com.intellij.ui.components.JBScrollPane;
+import com.intellij.ui.components.JBTextArea;
+import com.intellij.ui.components.JBTextField;
 import com.intellij.ui.content.Content;
 import com.intellij.ui.content.ContentFactory;
 
@@ -12,15 +15,18 @@ import java.awt.*;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
-import java.util.*;
+import java.util.Arrays;
 import java.util.List;
+import java.util.TimeZone;
 import java.util.stream.Collectors;
 
 public class TimestampToolWindowFactory implements ToolWindowFactory {
 
     @Override
     public void createToolWindowContent(Project project, ToolWindow toolWindow) {
-        JPanel panel = new JPanel(new BorderLayout(10, 10));
+        TimestampSettingsState settings = TimestampSettingsState.getInstance();
+
+        JPanel mainPanel = new JPanel(new BorderLayout(10, 10));
 
         // --- Input controls ---
         JBTextField input = new JBTextField();
@@ -29,22 +35,34 @@ public class TimestampToolWindowFactory implements ToolWindowFactory {
         // --- Timezone dropdown ---
         List<String> zones = Arrays.stream(TimeZone.getAvailableIDs())
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
         JComboBox<String> zoneSelector = new JComboBox<>(zones.toArray(new String[0]));
-        zoneSelector.setSelectedItem("UTC");
 
-        // --- History area (all past conversions) ---
+        // Restore previously selected zone or default to UTC
+        String savedZone = settings.getLastSelectedZone();
+        zoneSelector.setSelectedItem(savedZone != null ? savedZone : "UTC");
+
+        // --- History area ---
         JBTextArea historyArea = new JBTextArea(15, 30);
         historyArea.setEditable(false);
         historyArea.setLineWrap(true);
         historyArea.setWrapStyleWord(true);
         JScrollPane historyScroll = new JBScrollPane(historyArea);
 
+        // Restore saved history
+        if (!settings.getHistory().isEmpty()) {
+            historyArea.setText(String.join("\n", settings.getHistory()) + "\n");
+        }
+
         // --- Clear history ---
         JButton clearHistory = new JButton("Clear History");
-        clearHistory.addActionListener(e -> historyArea.setText(""));
+        clearHistory.addActionListener(e -> {
+            historyArea.setText("");
+            settings.getHistory().clear();
+            settings.saveState();
+        });
 
-        // --- Input section ---
+        // --- Layout setup ---
         JPanel inputPanel = new JPanel(new BorderLayout(5, 5));
         inputPanel.add(new JBLabel("Timestamp:"), BorderLayout.WEST);
         inputPanel.add(input, BorderLayout.CENTER);
@@ -58,7 +76,6 @@ public class TimestampToolWindowFactory implements ToolWindowFactory {
         topPanel.add(inputPanel);
         topPanel.add(zonePanel);
 
-        // --- Bottom (history + clear button) ---
         JPanel bottomPanel = new JPanel(new BorderLayout(5, 5));
         bottomPanel.add(new JBLabel("History:"), BorderLayout.NORTH);
         bottomPanel.add(historyScroll, BorderLayout.CENTER);
@@ -67,38 +84,49 @@ public class TimestampToolWindowFactory implements ToolWindowFactory {
         clearPanel.add(clearHistory);
         bottomPanel.add(clearPanel, BorderLayout.SOUTH);
 
-        // --- Main layout ---
-        panel.add(topPanel, BorderLayout.NORTH);
-        panel.add(bottomPanel, BorderLayout.CENTER);
+        mainPanel.add(topPanel, BorderLayout.NORTH);
+        mainPanel.add(bottomPanel, BorderLayout.CENTER);
+        mainPanel.setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
 
         // --- Conversion logic ---
         convert.addActionListener(e -> {
             try {
                 String inputText = input.getText().trim();
                 long ts = Long.parseLong(inputText);
-
-                // Handle seconds vs milliseconds
                 if (ts < 10000000000L) ts *= 1000; // seconds → millis
                 Instant instant = Instant.ofEpochMilli(ts);
 
                 String zoneId = (String) zoneSelector.getSelectedItem();
-                ZoneId zone = ZoneId.of(zoneId);
+                ZoneId selectedZone = ZoneId.of(zoneId);
+                ZoneId systemZone = ZoneId.systemDefault();
 
-                String formatted = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")
-                        .withZone(zone)
+                String formattedSelected = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")
+                        .withZone(selectedZone)
                         .format(instant);
 
-                // Clean timestamp (remove trailing 000 if it was seconds→millis)
+                String formattedSystem = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")
+                        .withZone(systemZone)
+                        .format(instant);
+
+                // Remove trailing 000 if present
                 String cleanTs = (inputText.endsWith("000") && inputText.length() > 10)
                         ? inputText.substring(0, inputText.length() - 3)
                         : inputText;
 
-                String result = cleanTs + " → " + formatted + " (" + zoneId + ")";
+                String result = cleanTs + " → " +
+                        formattedSelected + " (" + zoneId + ")" +
+                        " | " + formattedSystem + " (Local)";
 
                 // Prepend to history (latest first)
                 String existing = historyArea.getText();
-                historyArea.setText(result + "\n" + existing);
+                String newHistory = result + "\n" + existing;
+                historyArea.setText(newHistory);
                 historyArea.setCaretPosition(0);
+
+                // Save to persistent storage
+                settings.getHistory().add(0, result);
+                settings.setLastSelectedZone(zoneId);
+                settings.saveState();
             } catch (Exception ex) {
                 historyArea.setText("Invalid timestamp.\n" + historyArea.getText());
             }
@@ -106,7 +134,7 @@ public class TimestampToolWindowFactory implements ToolWindowFactory {
 
         // --- Register content ---
         ContentFactory contentFactory = ContentFactory.getInstance();
-        Content content = contentFactory.createContent(panel, "", false);
+        Content content = contentFactory.createContent(mainPanel, "", false);
         toolWindow.getContentManager().addContent(content);
     }
 }
